--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1.component.html
@@ -1,5 +1,5 @@
 <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-  <span>รายละเอียดหัวกระดาษทำการ
+  <span>ประเมินค่าใช้จ่ายในการเดินทาง
   </span>
 </div>
 <div class="ui form center aligned" id="int09-1" (submit)="onSubmitt()" ngNativeValidate>
