--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -96,30 +96,31 @@
                 <div class="menu">
                     <a class="item" [routerLink]="['/trader-selection']" routerLinkActive="active">สร้างกระดาษทำการคัดเลือกราย</a>
                     <a class="item" [routerLink]="['/create-working-paper-trader']" routerLinkActive="active">กำหนดเงื่อนไขเพื่อวิเคราะห์ความเสี่ยง </a>
-                    <a class="item" [routerLink]="['/working-paper-1-trader']" routerLinkActive="active">ส่งกระดาษทำการคัดเลือกราย </a>
+                    <a class="item" [routerLink]="['/add-external-data']" routerLinkActive="active">ส่งกระดาษทำการคัดเลือกราย </a>
+
                 </div>
             </div>
             <div class="ui dropdown item" routerLinkActive="active">
                 <i class="dropdown icon"></i>การตรวจสอบภาษี
                 <div class="menu">
                     <a class="item" [routerLink]="['/analysis']" routerLinkActive="active">การวิเคราะห์ข้อมูลเบื้องต้น </a>
-                    <a class="item" [routerLink]="['/']" routerLinkActive="active">รวบรวมข้อมูลเบื้องต้น </a>
-                    <a class="item" [routerLink]="['/']" routerLinkActive="active">ขออนุมัติออกตรวจสอบภาษี </a>
-                    <a class="item" [routerLink]="['/']" routerLinkActive="active">สร้างกระดาษทำการตรวจสอบภาษี </a>
-                    <a class="item" [routerLink]="['/']" routerLinkActive="active">สรุปผลการตรวจสอบภาษี</a>
+                    <a class="item"  routerLinkActive="active">รวบรวมข้อมูลเบื้องต้น </a>
+                    <a class="item"  routerLinkActive="active">ขออนุมัติออกตรวจสอบภาษี </a>
+                    <a class="item"  routerLinkActive="active">สร้างกระดาษทำการตรวจสอบภาษี </a>
+                    <a class="item"  routerLinkActive="active">สรุปผลการตรวจสอบภาษี</a>
                 </div>
             </div>
             <div class="ui dropdown item" routerLinkActive="active">
                 <i class="dropdown icon"></i>รายงานผลการตรวจสอบภาษี
                 <div class="menu">
-                    <a class="item" [routerLink]="['/']" routerLinkActive="active">รายงานผลการตรวจสอบภาษี </a>
-                    <a class="item" [routerLink]="['/']" routerLinkActive="active">ติดตามผลการตรวจสอบภาษี </a>
+                    <a class="item" routerLinkActive="active">รายงานผลการตรวจสอบภาษี </a>
+                    <a class="item" routerLinkActive="active">ติดตามผลการตรวจสอบภาษี </a>
 
                 </div>
             </div>
 
-            <a class="item" [routerLink]="['/']" routerLinkActive="active">ทะเบียนคุมหนังสือเรียก</a>
-            <a class="item" [routerLink]="['/']" routerLinkActive="active">บันทึกข้อความ หนังสือราชการ </a>
+            <a class="item" routerLinkActive="active">ทะเบียนคุมหนังสือเรียก</a>
+            <a class="item"  routerLinkActive="active">บันทึกข้อความ หนังสือราชการ </a>
 
 
         </div>
