แก้ไข เมนู int09-1-1

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1-1/int09-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1-1/int09-1-1.component.html
@@ -234,12 +234,12 @@
             <td>-</td>
             <td>{{d.rentDate}}</td>
             <td>-</td>
-            <td>{{d.passage}}</td>
-            <td>{{d.outgoings}}</td>
+            <td>{{d.travelCost}}</td>
+            <td>{{d.otherCost}}</td>
             <td>-</td>
             <td>{{d.note}}</td>
             <td>
-              <button class="ui mini button" type="button" (click)="editData(i)">แก้ไข</button>
+              <button class="ui mini red button" type="button" (click)="editData(i)">แก้ไข</button>
             </td>
           </tr>
         </tbody>
