--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-full-trader/working-paper-1-full-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-full-trader/working-paper-1-full-trader.component.html
@@ -23,8 +23,8 @@
                         <div class="four ui action input">
                             <input type="text" placeholder="MM/YYYY" value="{{before}}" readonly="" class="custom-readonly">
                             <button class="ui icon button">
-        <i class="add to calendar icon"></i>
-      </button>
+                <i class="add to calendar icon"></i>
+              </button>
                         </div>
                         <div class="one">
                             <label>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;</label>
@@ -32,8 +32,8 @@
                         <div class="four ui action input">
                             <input type="text" placeholder="MM/YYYY" value="{{last}}" readonly="" class="custom-readonly">
                             <button class="ui icon button">
-        <i class="add to calendar icon"></i>
-      </button>
+                <i class="add to calendar icon"></i>
+              </button>
                         </div>
                     </div>
                     <div class="eight wide field">&nbsp;&nbsp;&nbsp;
@@ -82,7 +82,7 @@
             <i class="list icon"></i>
             แสดงข้อมูลฉบับย่อ
           </button>
-                    <button class="ui mini primary button" routerLink="/working-paper-1-full-trader">
+                    <button class="ui mini primary button">
             <i class="list icon"></i>
             แสดงข้อมูลฉบับเต็ม
           </button>
@@ -101,49 +101,21 @@
                 </div>
             </div>
 
-            <div class="ui grid">
-                <div class="three wide column" style="padding-right: 0;padding-top: 0;">
+            <div class="ui grid" style="margin-top: 0">
+                <div class="three wide column" style="padding-right: 0;">
                     <div class="ui vertical menu" style="width: auto">
                         <div class="item">
                             <div class="header">แยกข้อมูลตามกลุ่มของการชำระภาษี</div>
                         </div>
                         <div class="item">
-                            <div class="header">ผู้ประกอบการที่ชำระภาษีครบ 24 เดือน</div>
-                            <div class="menu">
-                                <a class="item">-อัตราการชำระภาษีเพิ่มขึ้นมากกว่าร้อยละ 5</a>
-                                <a class="item">-อัตราการชำระภาษีคงที่ (+-ไม่เกินร้อยละ 5)</a>
-                                <a class="item">-อัตราการชำระภาษีลดลงมากกว่าร้อยละ 5</a>
+                            <div class="menu" *ngFor="let num of _num1; let i = index">
+                                <a class="item">-เงื่อนไขที่ {{i+1}}</a>
                             </div>
                         </div>
                         <div class="item">
-                            <div class="header">ผู้ประกอบการที่ชำระภาษีไม่ครบ 24 เดือน</div>
                             <div class="menu">
-                                <a class="item">-อัตราการชำระภาษีเพิ่มขึ้นมากกว่าร้อยละ 5</a>
-                                <a class="item">-อัตราการชำระภาษีเพิ่มขึ้นไม่เกินร้อยละ 5</a>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="header">ผู้ประกอบการใหม่</div>
-                            <div class="menu">
-                                <a class="item">-ผู้ประกอบการใหม่</a>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="header">สรุปจำนวนตามพิกัดสินค้า</div>
-                            <div class="menu">
-                                <a class="item">-สรุปจำนวนตามพิกัดสินค้า</a>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="header">รวมทุกกลุ่มข้อมูลและรวมพิกัดสินค้า</div>
-                            <div class="menu">
-                                <a class="item">-รวมทุกกลุ่มข้อมูลและรวมพิกัดสินค้า</a>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="header">สร้างบันทึกข้อความขอส่งข้อมูล</div>
-                            <div class="menu">
-                                <a class="item">-สร้างบันทึกข้อความขอส่งข้อมูล</a>
+                                <a class="item">-รวมทุกเงื่อนไข</a>
+                                <a class="item">-รายที่ไม่อยู่ในเงื่อนไข</a>
                             </div>
                         </div>
                     </div>
@@ -151,40 +123,61 @@
 
                 <div class="thirteen wide column" style="padding-top: 0">
                     <div style="overflow-x: scroll;overflow-y: hidden;padding-bottom: 14px;">
-                        <table class="ui small celled table center aligned" style="width: 200%;">
-                            <thead>
+                        <table id="userManagementDt" class="ui small celled table aligned hover" style="width: 5000px;">
+                            <thead id="trDrinamic">
                                 <tr>
-                                    <th rowspan="2">ลำดับ</th>
-                                    <th rowspan="2">ทะเบียนสรรพสามิต เดิม/ใหม่</th>
-                                    <th rowspan="2">ชื่อผู้ประกอบการ</th>
-                                    <th rowspan="2">ชื่อโรงอุตสาหกรรม/สถานบริการ</th>
-                                    <th rowspan="2">พื้นที่</th>
-                                    <th colspan="2">การชำระภาษีในสภาวะปกติ (บาท)</th>
-                                    <th rowspan="2">เปลี่ยนแปลง (ร้อยละ)</th>
-                                    <th rowspan="2">ชำระภาษี(เดือน)</th>
-                                    <th colspan="3">การตรวจสอบภาษีย้อนหลัง 3 ปีงบประมาณ</th>
-                                    <th rowspan="2">ภาค</th>
-                                    <th rowspan="2">พิกัด</th>
+                                    <th rowspan="2" style="text-align: center !important">ลำดับ</th>
+                                    <th rowspan="2" style="text-align: center !important">ทะเบียนสรรพสามิต เดิม/ใหม่</th>
+                                    <th rowspan="2" style="text-align: center !important">ชื่อผู้ประกอบการ</th>
+                                    <th rowspan="2" style="text-align: center !important">ชื่อโรงอุตสาหกรรม/สถานบริการ</th>
+                                    <th rowspan="2" style="text-align: center !important">พื้นที่</th>
+                                    <th colspan="2" style="text-align: center !important">การชำระภาษีในสภาวะปกติ (บาท)</th>
+                                    <th rowspan="2" style="text-align: center !important">เปลี่ยนแปลง (ร้อยละ)</th>
+                                    <th rowspan="2" style="text-align: center !important">ชำระภาษี(เดือน)</th>
+                                    <th colspan="3" style="text-align: center !important">การตรวจสอบภาษีย้อนหลัง 3 ปีงบประมาณ</th>
+                                    <th rowspan="2" style="text-align: center !important">ภาค</th>
+                                    <th rowspan="2" style="text-align: center !important">พิกัด</th>
+                                    <th rowspan="2" style="text-align: center !important">ที่อยู่โรงอุตสาหกรรม/สถานบริการ</th>
+                                    <th rowspan="2" style="text-align: center !important">ทุนจดทะเบียน</th>
+                                    <th rowspan="2" style="text-align: center !important">สถานะ/วันที่</th>
+                                    <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2 }} เดือนแรก</th>
+                                    <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2 }} เดือนหลัง </th>
+                                    <th rowspan="2" style="text-align: center !important">เพิ่มข้อมูลภายนอก</th>
                                 </tr>
-
                                 <tr>
-                                    <th style="border-left: 1px solid rgba(34,36,38,.1);">2559</th>
-                                    <th>2560</th>
-                                    <th>2558</th>
-                                    <th>2559</th>
-                                    <th>2560</th>
+                                    <th style="border-left: 1px solid rgba(34,36,38,.1);">{{ month/2 }} เดือนแรก</th>
+                                    <th style="text-align: center !important">{{ month/2 }} เดือนหลัง </th>
+                                    <th style="text-align: center !important">2558</th>
+                                    <th style="text-align: center !important">2559</th>
+                                    <th style="text-align: center !important">2560</th>
+                                    <th style="text-align: center !important">พ.ค. 58</th>
+                                    <th style="text-align: center !important">มิ.ย. 58</th>
+                                    <th style="text-align: center !important">ก.ค. 58</th>
+                                    <th style="text-align: center !important">ส.ค. 58</th>
+                                    <th style="text-align: center !important">ก.ย. 58</th>
+                                    <th style="text-align: center !important">ต.ค. 58</th>
+                                    <th style="text-align: center !important">พ.ย. 58</th>
+                                    <th style="text-align: center !important">ธ.ค. 58</th>
+                                    <th style="text-align: center !important">ม.ค. 59</th>
+                                    <th style="text-align: center !important">ก.พ. 59</th>
+                                    <th style="text-align: center !important">มี.ค. 59</th>
+                                    <th style="text-align: center !important">เม.ย. 59 </th>
+                                    <th style="text-align: center !important">พ.ค. 58</th>
+                                    <th style="text-align: center !important">มิ.ย. 58</th>
+                                    <th style="text-align: center !important">ก.ค. 58</th>
+                                    <th style="text-align: center !important">ส.ค. 58</th>
+                                    <th style="text-align: center !important">ก.ย. 58</th>
+                                    <th style="text-align: center !important">ต.ค. 58</th>
+                                    <th style="text-align: center !important">พ.ย. 58</th>
+                                    <th style="text-align: center !important">ธ.ค. 58</th>
+                                    <th style="text-align: center !important">ม.ค. 59</th>
+                                    <th style="text-align: center !important">ก.พ. 59</th>
+                                    <th style="text-align: center !important">มี.ค. 59</th>
+                                    <th style="text-align: center !important">เม.ย. 59 </th>
                                 </tr>
                             </thead>
                             <tbody>
                             </tbody>
-                            <tfoot>
-                                <tr>
-                                    <th colspan="10"></th>
-                                    <th colspan="2">รวมผู้ประกอบการทั้งสิ้นทั้งสิ้น</th>
-                                    <th>21</th>
-                                    <th>ราย</th>
-                                </tr>
-                            </tfoot>
                         </table>
                     </div>
                     <br>
@@ -194,7 +187,7 @@
                 <i class="print icon"></i>
                 พิมพ์กระดาษทำการคัดเลือกราย
               </button>
-                            <button class="ui mini primary button">
+                            <button class="ui mini primary button" routerLink="/add-external-data">
                 <i class="save icon"></i>
                 บันทึกข้อมูล
               </button>
@@ -206,6 +199,7 @@
                     </div>
 
                 </div>
+
             </div>
         </div>
     </div>
