--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-trader/working-paper-1-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-trader/working-paper-1-trader.component.html
@@ -78,7 +78,7 @@
             <div class="ui grid">
                 <div class="three wide column" style="padding-bottom: 0"></div>
                 <div class="six wide column" style="padding-bottom: 0">
-                    <button class="ui mini primary button" >
+                    <button class="ui mini primary button">
             <i class="list icon"></i>
             แสดงข้อมูลฉบับย่อ
           </button>
@@ -112,6 +112,12 @@
                                 <a class="item">-เงื่อนไขที่ {{i+1}}</a>
                             </div>
                         </div>
+                        <div class="item">
+                            <div class="menu">
+                                <a class="item">-รวมทุกเงื่อนไข</a>
+                                <a class="item">-รายที่ไม่อยู่ในเงื่อนไข</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -137,37 +143,6 @@
                                     <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2 }} เดือนแรก</th>
                                     <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2 }} เดือนหลัง </th>
                                     <th rowspan="2" style="text-align: center !important">เพิ่มข้อมูลภายนอก</th>
-                                </tr>
-                                <tr>
-                                    <th style="border-left: 1px solid rgba(34,36,38,.1);">{{ month/2 }} เดือนแรก</th>
-                                    <th style="text-align: center !important">{{ month/2 }} เดือนหลัง </th>
-                                    <th style="text-align: center !important">2558</th>
-                                    <th style="text-align: center !important">2559</th>
-                                    <th style="text-align: center !important">2560</th>
-                                    <th style="text-align: center !important">พ.ค. 58</th>
-                                    <th style="text-align: center !important">มิ.ย. 58</th>
-                                    <th style="text-align: center !important">ก.ค. 58</th>
-                                    <th style="text-align: center !important">ส.ค. 58</th>
-                                    <th style="text-align: center !important">ก.ย. 58</th>
-                                    <th style="text-align: center !important">ต.ค. 58</th>
-                                    <th style="text-align: center !important">พ.ย. 58</th>
-                                    <th style="text-align: center !important">ธ.ค. 58</th>
-                                    <th style="text-align: center !important">ม.ค. 59</th>
-                                    <th style="text-align: center !important">ก.พ. 59</th>
-                                    <th style="text-align: center !important">มี.ค. 59</th>
-                                    <th style="text-align: center !important">เม.ย. 59 </th>
-                                    <th style="text-align: center !important">พ.ค. 58</th>
-                                    <th style="text-align: center !important">มิ.ย. 58</th>
-                                    <th style="text-align: center !important">ก.ค. 58</th>
-                                    <th style="text-align: center !important">ส.ค. 58</th>
-                                    <th style="text-align: center !important">ก.ย. 58</th>
-                                    <th style="text-align: center !important">ต.ค. 58</th>
-                                    <th style="text-align: center !important">พ.ย. 58</th>
-                                    <th style="text-align: center !important">ธ.ค. 58</th>
-                                    <th style="text-align: center !important">ม.ค. 59</th>
-                                    <th style="text-align: center !important">ก.พ. 59</th>
-                                    <th style="text-align: center !important">มี.ค. 59</th>
-                                    <th style="text-align: center !important">เม.ย. 59 </th>
                                 </tr>
                             </thead>
                             <tbody>
