filter flag "N and NOT N"

--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
@@ -46,12 +46,7 @@
                     <div class="fourteen wide field"></div>
                     <div class="two wide field">
                         <input type="hidden" id="exciseId" value="EX" />
-                        <button
-                            type="button"
-                            id="exciseBtn"
-                            style="margin-left: auto"
-                            class="ui mini primary button right floated"
-                            onclick="window.location='/#/add-data?id='+document.getElementById('exciseId').value+'&num=25610615-01-00330';">
+                        <button type="button" id="exciseBtn" style="margin-left: auto" class="ui mini primary button right floated" onclick="window.location='/#/add-data?id='+document.getElementById('exciseId').value+'&num=25610615-01-00330';">
                             <i class="add icon"></i>
                             เพิ่มข้อมูล
                         </button>
@@ -98,8 +93,8 @@
                         </div>
                         <div class="item">
                             <div class="menu">
-                                <a class="item">-รายที่อยู่ในเงื่อนไข</a>
-                                <a class="item">-รายที่ไม่อยู่ในเงื่อนไข</a>
+                                <a class="item" (click)="FlagN()">-รายที่อยู่ในเงื่อนไข</a>
+                                <a class="item" (click)="FlagNotN()">-รายที่ไม่อยู่ในเงื่อนไข</a>
                             </div>
                         </div>
                     </div>
