--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
@@ -30,7 +30,7 @@
                         </div>
                     </div>
                     <div class="one wide field"></div>
-                    <div class="two wide field required">
+                    <div class="two wide field">
                         <label>ย้อนหลังไป</label>
                     </div>
                     <div class="two wide field ">
