--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-trader/working-paper-1-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-trader/working-paper-1-trader.component.html
@@ -23,8 +23,8 @@
                         <div class="four ui action input">
                             <input type="text" placeholder="MM/YYYY" value="{{before}}" readonly="" class="custom-readonly">
                             <button class="ui icon button">
-                <i class="add to calendar icon"></i>
-              </button>
+                                <i class="add to calendar icon"></i>
+                            </button>
                         </div>
                         <div class="one">
                             <label>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;</label>
@@ -32,8 +32,8 @@
                         <div class="four ui action input">
                             <input type="text" placeholder="MM/YYYY" value="{{last}}" readonly="" class="custom-readonly">
                             <button class="ui icon button">
-                <i class="add to calendar icon"></i>
-              </button>
+                                <i class="add to calendar icon"></i>
+                            </button>
                         </div>
                     </div>
                     <div class="eight wide field">&nbsp;&nbsp;&nbsp;
@@ -79,13 +79,13 @@
                 <div class="three wide column" style="padding-bottom: 0"></div>
                 <div class="six wide column" style="padding-bottom: 0">
                     <button class="ui mini primary button">
-            <i class="list icon"></i>
-            แสดงข้อมูลฉบับย่อ
-          </button>
+                        <i class="list icon"></i>
+                        แสดงข้อมูลฉบับย่อ
+                    </button>
                     <button class="ui mini primary button" routerLink="/working-paper-1-full-trader">
-            <i class="list icon"></i>
-            แสดงข้อมูลฉบับเต็ม
-          </button>
+                        <i class="list icon"></i>
+                        แสดงข้อมูลฉบับเต็ม
+                    </button>
                 </div>
                 <div class="seven wide column" style="padding-bottom: 0">
                     <div class="ui form">
@@ -93,8 +93,8 @@
                             <div class="sixteen wide field">
                                 <label style="width: 5em;">พิกัด</label>
                                 <select class="ui dropdown">
-                  <option *ngFor="let item of listItem" value="{{item}}">{{item}}</option>
-                </select>
+                                    <option *ngFor="let item of listItem" value="{{item}}">{{item}}</option>
+                                </select>
                             </div>
                         </div>
                     </div>
@@ -108,7 +108,7 @@
                             <div class="header">แยกข้อมูลตามกลุ่มของการชำระภาษี</div>
                         </div>
                         <div class="item">
-                            <div class="menu" *ngFor="let num of _num1; let i = index">
+                            <div class="menu" *ngFor="let num of _num1; let i = index" (click)="filterDataByCriteria(i)">
                                 <a class="item">-เงื่อนไขที่ {{i+1}}</a>
                             </div>
                         </div>
@@ -153,22 +153,20 @@
                     <div class="ui center aligned grid">
                         <div class="sixteen wide column">
                             <button class="ui mini primary button">
-                <i class="print icon"></i>
-                พิมพ์กระดาษทำการคัดเลือกราย
-              </button>
-                            <button class="ui mini primary button" routerLink="/add-external-data">
-                <i class="save icon"></i>
-                บันทึกข้อมูล
-              </button>
+                                <i class="print icon"></i>
+                                พิมพ์กระดาษทำการคัดเลือกราย
+                            </button>
+                            <button class="ui mini primary button" (click)="updateFlg()">
+                                <i class="save icon"></i>
+                                บันทึกข้อมูล
+                            </button>
                             <button class="ui mini button">
-                <i class="refresh icon"></i>
-                ล้างข้อมูล
-              </button>
+                                <i class="refresh icon"></i>
+                                ล้างข้อมูล
+                            </button>
                         </div>
                     </div>
-
                 </div>
-
             </div>
         </div>
     </div>
