reset value when press reset button

--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -143,7 +143,7 @@
                             <i class="add icon"></i>
                             สร้างกระดาษทำการคัดเลือกราย
                         </button>
-                        <button class="ui mini button">
+                        <button class="ui mini button" routerLink="/trader-selection">
                             <i class="refresh icon"></i>
                             ล้างข้อมูล
                         </button>
