--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-trader/working-paper-1-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-trader/working-paper-1-trader.component.html
@@ -160,10 +160,10 @@
                                 <i class="save icon"></i>
                                 บันทึกข้อมูล
                             </button>
-                            <button class="ui mini button">
-                                <i class="refresh icon"></i>
-                                ล้างข้อมูล
-                            </button>
+                            <button class="ui mini button" routerLink="/create-working-paper-trader">
+                <i class="refresh icon"></i>
+                ล้างข้อมูล
+              </button>
                         </div>
                     </div>
                 </div>
