--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1-1/int09-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1-1/int09-1-1.component.html
@@ -131,7 +131,7 @@
             </label>
           </div>
           <div class="four wide field">
-            <input type="text" [(ngModel)]="data.rentDate" name="rentDate" required>
+            <input type="text" [(ngModel)]="data.rentDate" name="rentDate" >
           </div>
         </div>
         <div class="inline fields">
@@ -139,13 +139,13 @@
             <label>ห้องเดี่ยว</label>
             <div class="field">
               <div class="ui radio checkbox">
-                <input type="radio" [(ngModel)]="data.restType" name="frequency" value="rest-single" checked="checked" required>
+                <input type="radio" [(ngModel)]="data.restType" name="frequency" value="rest-single" checked="checked" >
               </div>
             </div>
             <label>ห้องคู่</label>
             <div class="field">
               <div class="ui radio checkbox">
-                <input type="radio" [(ngModel)]="data.restType" name="frequency" value="rest-double" required>
+                <input type="radio" [(ngModel)]="data.restType" name="frequency" value="rest-double" >
               </div>
             </div>
           </div>
@@ -163,7 +163,7 @@
             </label>
           </div>
           <div class="four wide field">
-            <input type="text" [(ngModel)]="data.otherCost" name="otherCost" required>
+            <input type="text" [(ngModel)]="data.otherCost" name="otherCost">
           </div>
         </div>
 
