--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2.component.html
@@ -2,14 +2,14 @@
   <span> สัญญาการยืมเงิน</span>
 </div>
 
-<div class="ui attached  segment">
-    <div class="ui right aligned grid">
-        <div class="sixteen wide column">
-          <button class="ui mini primary button">           
-            Export
-          </button>           
-        </div>
-      </div>
+<form class="ui attached  segment">
+  <div class="ui right aligned grid">
+    <div class="sixteen wide column">
+      <button class="ui mini primary button">
+        Export
+      </button>
+    </div>
+  </div>
   <div class="ui grid center aligned">
 
     <div class="ui one wide column">&nbsp;</div>
@@ -89,7 +89,7 @@
         </div>
         <div class="inline fields">
           <div class="fifteen wide field">
-            <textarea name="" id="" rows="2" style="resize: none" ></textarea>
+            <textarea name="" id="" rows="2" style="resize: none"></textarea>
           </div>
         </div>
         <div class="inline fields">
@@ -193,7 +193,7 @@
             <label>)&nbsp;</label>
           </div>
         </div>
-<br>
+        <br>
         <div class="inline fields">
           <div class="one wide field">
             <label>ลงชื่อ :</label>
@@ -221,7 +221,7 @@
         </div>
         <br>
 
-        <div class="inline fields">        
+        <div class="inline fields">
           <div class="nine wide field">
             อนุมัติให้ยืมตามเงื่อนไขข้างต้นได้ เป็นเงิน 122,600.00 บาท
           </div>
@@ -260,9 +260,9 @@
           </div>
         </div>
         <br>
-        <div class="inline fields">    
+        <div class="inline fields">
           <div class="four wide field">
-              ได้รับเงินยืมจำนวน 		 122,600.00 	บาท
+            ได้รับเงินยืมจำนวน 122,600.00 บาท
           </div>
           <div class="eight wide field">
             <label class="custom-label-w-20">(ตัวอักษร</label>
@@ -284,8 +284,8 @@
             </label>
           </div>
           <div class="two wide field">
-              <label>ผู้รับเงิน </label>
-            </div>
+            <label>ผู้รับเงิน </label>
+          </div>
           <div class="one wide field">
             <label>
               วันที่ :
@@ -300,4 +300,4 @@
       </div>
     </div>
   </div>
-</div>
+</form>
