--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -117,7 +117,7 @@
                 </div>
             </div>
             <a class="item" routerLinkActive="active">ทะเบียนคุมหนังสือเรียก</a>
-            <a class="item" [routerLink]="['/tax-audit-manage']" routerLinkActive="active">บันทึกข้อความ หนังสือราชการ </a>
+            <a class="item" [routerLink]="['tax-audit-manage']" routerLinkActive="active">บันทึกข้อความ หนังสือราชการ</a>
         </div>
     </div>
     <div class="ui simple dropdown item" *ngIf="authService.getLogin()" style=" color:White ">
